--- a/MenusToolbar/app/build.gradle
+++ b/MenusToolbar/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.sebastian.toolbarejemplo"
+        applicationId "com.kmmx.menustoolbar"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
@@ -25,6 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:25.0.0'
 }
