agregando ejemplo sencillo de realm

--- a/RealmEjemplo/app/build.gradle
+++ b/RealmEjemplo/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.example.contentproviderypermisos"
+        applicationId "com.example.realmejemplo"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
